# x-tracker

./: .env.example  CLAUDE.md  FUNCTIONAL_SPEC.md  INACTIVE_CLEANER_GUIDE.md  Makefile  OAUTH_SETUP_GUIDE.md  README.md  SYSTEM_OVERVIEW.md  main.py  openapi.json  products_limits.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: competitor_intel.yml  daily_metrics.yml  database_backup.yml  growth_monitoring.yml  inactive_cleaner.yml  weekly_reports.yml
data/: competitor_intelligence.db  x_growth_data.db  x_tracker.db
reports/archive/: competitor_intelligence_report.md  x_api_capabilities_report.md
scripts/: test_credentials.sh
scripts/archive/: authentication_analyzer.py  cleaner_database.py  competitor_tracker.py  generate_charts.py  inactive_account_cleaner.py  oauth_authenticator.py  track_metrics.py  whitelist_manager.py  x_growth_center.py
src/core/: exceptions.py  models.py
src/infrastructure/api/: x_api_client.py
src/infrastructure/database/: connection.py
src/shared/: config.py  logger.py
src/ui/: app.py
src/ui/components/: charts.py
src/ui/pages/: analytics.py  cleaner.py  dashboard.py  settings.py
